force-app/main/default/objects/Existing_Grants__c/Existing_Grants__c.object-meta.xml
<CustomObject>
    <label>Existing Grants</label>
    <nameField>
        <displayFormat>EXG-{00000}</displayFormat>
        <label>Existing Grants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>