force-app/main/default/objects/Existing_Grants__c/fields/Abstracts_of_ongoing_grants_fellowship__c.field-meta.xml
<CustomField>
    <fullName>Abstracts_of_ongoing_grants_fellowship__c</fullName>
    <label>Abstracts of ongoing grants &amp; fellowship</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>