force-app/main/default/objects/Existing_Grants__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Existing Grants</relationshipLabel>
    <relationshipName>Existing_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>