force-app/main/default/objects/Existing_Grants__c/fields/Funding_Agency__c.field-meta.xml
<CustomField>
    <fullName>Funding_Agency__c</fullName>
    <label>Funding Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>