force-app/main/default/objects/Existing_Grants__c/fields/Other_Currency__c.field-meta.xml
<CustomField>
    <fullName>Other_Currency__c</fullName>
    <label>Other Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>