force-app/main/default/objects/Existing_Grants__c/fields/Role_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Role_of_Applicant__c</fullName>
    <label>Role of Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>Co-Investigator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>