force-app/main/default/objects/Existing_Grants__c/fields/Total_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Award_Amount__c</fullName>
    <label>Total Award Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>