force-app/main/default/objects/Existing_Grants__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Applicant_Proposal_Association__c</columns>
    <columns>Role_of_Applicant__c</columns>
    <columns>Duration_In_Months__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Total_Award_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>